# WordPressAPI

./: .gitignore  README.md  create-product.py  docker-compose.yml  env.example  get-orders.py  get-products.py  main.py  pyproject.toml  requirements.txt
plugins/: mi-api.php
plugins/mi-api/endpoints/: productos.php
src/wordpressapi/: .env.example  dependencies.py
src/wordpressapi/src/routers/: odoo_woocommerce_router.py  order_router.py  product_router.py  sync_orders_router.py
